ingress-filewallball.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filewallball-ingress
  namespace: filewallball
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - filewallball.local
      secretName: filewallball-tls
  rules:
    - host: filewallball.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filewallball-service
                port:
                  number: 8000
